add strip plot option for indirect defect length plots

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1222,31 +1222,51 @@
     "    column_name=\"curvature_defect_direct_gaps_lengths\",\n",
     ")\n",
     "\n",
+    "hist_plots = False\n",
+    "strip_plots = True\n",
+    "\n",
     "# for each number of gaps, plot the distribution of gap lengths\n",
     "print(\"###\\n###\\n### ALL TOGETHER DIRECT ###\\n###\\n###\")\n",
     "for num_gaps, gap_lengths in curvature_defect_gap_lengths_all.items():\n",
     "    print(f\"Number of gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
-    "    plot_hist_list(\n",
-    "        data=gap_lengths_flat,\n",
-    "        xlabel=\"Gap Length (nm)\",\n",
-    "        ylabel=\"Count\",\n",
-    "        title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "        xlim=(0, 700),\n",
-    "    )\n",
+    "    if hist_plots:\n",
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
+    "        )\n",
+    "    if strip_plots:\n",
+    "        plot_stripviolinplot_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            ylabel=\"Gap Length (nm)\",\n",
+    "            xlabel=\"Number of Gaps\",\n",
+    "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        )\n",
     "\n",
     "    if num_gaps > 1:\n",
     "        # plot the summed gap lengths for each list\n",
     "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
     "\n",
-    "        plot_hist_list(\n",
-    "            data=summed_gap_lengths,\n",
-    "            xlabel=\"Summed Gap Length (nm)\",\n",
-    "            ylabel=\"Count\",\n",
-    "            title=f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
-    "        )\n",
+    "        if hist_plots:\n",
+    "            plot_hist_list(\n",
+    "                data=summed_gap_lengths,\n",
+    "                xlabel=\"Summed Gap Length (nm)\",\n",
+    "                ylabel=\"Count\",\n",
+    "                title=f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "                xlim=(0, 700),\n",
+    "            )\n",
+    "\n",
+    "        if strip_plots:\n",
+    "            plot_stripviolinplot_list(\n",
+    "                data=summed_gap_lengths,\n",
+    "                ylabel=\"Summed Gap Length (nm)\",\n",
+    "                xlabel=\"Number of Gaps\",\n",
+    "                title=f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "            )\n",
     "\n",
     "# get the height defect gap lengths\n",
     "height_defect_gap_lengths_all = get_defect_gap_lengths(\n",
@@ -1259,24 +1279,41 @@
     "    print(f\"Number of gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
-    "    plot_hist_list(\n",
-    "        data=gap_lengths_flat,\n",
-    "        xlabel=\"Gap Length (nm)\",\n",
-    "        ylabel=\"Count\",\n",
-    "        title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "        xlim=(0, 700),\n",
-    "    )\n",
+    "    if hist_plots:\n",
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
+    "        )\n",
+    "\n",
+    "    if strip_plots:\n",
+    "        plot_stripviolinplot_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            ylabel=\"Gap Length (nm)\",\n",
+    "            xlabel=\"Number of Gaps\",\n",
+    "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        )\n",
     "\n",
     "    if num_gaps > 1:\n",
     "        # plot the summed gap lengths for each list\n",
     "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
-    "        plot_hist_list(\n",
-    "            data=summed_gap_lengths,\n",
-    "            xlabel=\"Summed Gap Length (nm)\",\n",
-    "            ylabel=\"Count\",\n",
-    "            title=f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
-    "        )\n",
+    "        if hist_plots:\n",
+    "            plot_hist_list(\n",
+    "                data=summed_gap_lengths,\n",
+    "                xlabel=\"Summed Gap Length (nm)\",\n",
+    "                ylabel=\"Count\",\n",
+    "                title=f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "                xlim=(0, 700),\n",
+    "            )\n",
+    "        if strip_plots:\n",
+    "            plot_stripviolinplot_list(\n",
+    "                data=summed_gap_lengths,\n",
+    "                ylabel=\"Summed Gap Length (nm)\",\n",
+    "                xlabel=\"Number of Gaps\",\n",
+    "                title=f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "            )\n",
     "\n",
     "# ================== curvature and height defect gap lengths per dose\n",
     "print(\"###\\n###\\n### PER DOSE DIRECT ###\\n###\\n###\")\n",
@@ -1292,13 +1329,21 @@
     "        print(f\"Number of gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
-    "        plot_hist_list(\n",
-    "            data=gap_lengths_flat,\n",
-    "            xlabel=\"Gap Length (nm)\",\n",
-    "            ylabel=\"Count\",\n",
-    "            title=f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
-    "        )\n",
+    "        if hist_plots:\n",
+    "            plot_hist_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                xlabel=\"Gap Length (nm)\",\n",
+    "                ylabel=\"Count\",\n",
+    "                title=f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                xlim=(0, 700),\n",
+    "            )\n",
+    "        if strip_plots:\n",
+    "            plot_stripviolinplot_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                ylabel=\"Gap Length (nm)\",\n",
+    "                xlabel=\"Number of Gaps\",\n",
+    "                title=f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            )\n",
     "\n",
     "    # curvature defect gap lengths\n",
     "    curvature_defect_gap_lengths_dose = get_defect_gap_lengths(\n",
@@ -1308,13 +1353,21 @@
     "    for num_gaps, gap_lengths in curvature_defect_gap_lengths_dose.items():\n",
     "        print(f\"Number of gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "        plot_hist_list(\n",
-    "            data=gap_lengths_flat,\n",
-    "            xlabel=\"Gap Length (nm)\",\n",
-    "            ylabel=\"Count\",\n",
-    "            title=f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
-    "        )\n",
+    "        if hist_plots:\n",
+    "            plot_hist_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                xlabel=\"Gap Length (nm)\",\n",
+    "                ylabel=\"Count\",\n",
+    "                title=f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                xlim=(0, 700),\n",
+    "            )\n",
+    "        if strip_plots:\n",
+    "            plot_stripviolinplot_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                ylabel=\"Gap Length (nm)\",\n",
+    "                xlabel=\"Number of Gaps\",\n",
+    "                title=f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            )\n",
     "\n",
     "print(\"###\\n###\\n### ALL TOGETHER INDIRECT ###\\n###\\n###\")\n",
     "\n",
@@ -1329,13 +1382,21 @@
     "    print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
-    "    plot_hist_list(\n",
-    "        data=gap_lengths_flat,\n",
-    "        xlabel=\"Indirect Gap Length (nm)\",\n",
-    "        ylabel=\"Count\",\n",
-    "        title=f\"Curvature Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "        xlim=(0, 700),\n",
-    "    )\n",
+    "    if hist_plots:\n",
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Indirect Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Curvature Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
+    "        )\n",
+    "    if strip_plots:\n",
+    "        plot_stripviolinplot_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            ylabel=\"Indirect Gap Length (nm)\",\n",
+    "            xlabel=\"Number of Gaps\",\n",
+    "            title=f\"Curvature Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        )\n",
     "\n",
     "# height\n",
     "height_defect_indirect_gap_lengths_all = get_defect_gap_lengths(\n",
@@ -1348,13 +1409,21 @@
     "    print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
     "\n",
-    "    plot_hist_list(\n",
-    "        data=gap_lengths_flat,\n",
-    "        xlabel=\"Indirect Gap Length (nm)\",\n",
-    "        ylabel=\"Count\",\n",
-    "        title=f\"Height Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "        xlim=(0, 700),\n",
-    "    )\n",
+    "    if hist_plots:\n",
+    "        plot_hist_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            xlabel=\"Indirect Gap Length (nm)\",\n",
+    "            ylabel=\"Count\",\n",
+    "            title=f\"Height Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            xlim=(0, 700),\n",
+    "        )\n",
+    "    if strip_plots:\n",
+    "        plot_stripviolinplot_list(\n",
+    "            data=gap_lengths_flat,\n",
+    "            ylabel=\"Indirect Gap Length (nm)\",\n",
+    "            xlabel=\"Number of Gaps\",\n",
+    "            title=f\"Height Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "        )\n",
     "\n",
     "# ================== per dose\n",
     "print(\"###\\n###\\n### PER DOSE INDIRECT ###\\n###\\n###\")\n",
@@ -1369,13 +1438,21 @@
     "    for num_gaps, gap_lengths in height_defect_indirect_gap_lengths_dose.items():\n",
     "        print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "        plot_hist_list(\n",
-    "            data=gap_lengths_flat,\n",
-    "            xlabel=\"Indirect Gap Length (nm)\",\n",
-    "            ylabel=\"Count\",\n",
-    "            title=f\"Height Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
-    "        )\n",
+    "        if hist_plots:\n",
+    "            plot_hist_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                xlabel=\"Indirect Gap Length (nm)\",\n",
+    "                ylabel=\"Count\",\n",
+    "                title=f\"Height Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                xlim=(0, 700),\n",
+    "            )\n",
+    "        if strip_plots:\n",
+    "            plot_stripviolinplot_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                ylabel=\"Indirect Gap Length (nm)\",\n",
+    "                xlabel=\"Number of Gaps\",\n",
+    "                title=f\"Height Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            )\n",
     "    # curvature defect indirect gap lengths\n",
     "    curvature_defect_indirect_gap_lengths_dose = get_defect_gap_lengths(\n",
     "        df=dose_df,\n",
@@ -1384,14 +1461,30 @@
     "    for num_gaps, gap_lengths in curvature_defect_indirect_gap_lengths_dose.items():\n",
     "        print(f\"Number of indirect gaps: {num_gaps}\")\n",
     "        gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
-    "        plot_hist_list(\n",
-    "            data=gap_lengths_flat,\n",
-    "            xlabel=\"Indirect Gap Length (nm)\",\n",
-    "            ylabel=\"Count\",\n",
-    "            title=f\"Curvature Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
-    "        )"
+    "        if hist_plots:\n",
+    "            plot_hist_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                xlabel=\"Indirect Gap Length (nm)\",\n",
+    "                ylabel=\"Count\",\n",
+    "                title=f\"Curvature Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                xlim=(0, 700),\n",
+    "            )\n",
+    "        if strip_plots:\n",
+    "            plot_stripviolinplot_list(\n",
+    "                data=gap_lengths_flat,\n",
+    "                ylabel=\"Indirect Gap Length (nm)\",\n",
+    "                xlabel=\"Number of Gaps\",\n",
+    "                title=f\"Curvature Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "            )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b07334",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
