plot defect gap length arrays separately by sorted array position, ie two plots for two gaps, one shorter one longer

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1163,6 +1163,11 @@
     "            defect_gap_lengths_by_number_of_gaps[num_gaps].append(gap_lengths)\n",
     "        else:\n",
     "            print(f\"Row {i} has non-list gap lengths: {row[column_name]}\")\n",
+    "\n",
+    "    # sort the dictionary by number of gaps\n",
+    "    defect_gap_lengths_by_number_of_gaps = dict(\n",
+    "        sorted(defect_gap_lengths_by_number_of_gaps.items(), key=lambda item: item[0])\n",
+    "    )\n",
     "    return defect_gap_lengths_by_number_of_gaps"
    ]
   },
@@ -1484,7 +1489,62 @@
    "id": "c0b07334",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(f\"###\\n###\\n### CURVATURE DEFECT GAP LENGTHS ###\\n###\\n###\")\n",
+    "\n",
+    "curvature_defect_gap_lengths_all = get_defect_gap_lengths(\n",
+    "    df=defect_stats_df,\n",
+    "    column_name=\"curvature_defect_direct_gaps_lengths\",\n",
+    ")\n",
+    "\n",
+    "for num_gaps, gap_lengths in curvature_defect_gap_lengths_all.items():\n",
+    "    print(f\"number of gaps: {num_gaps}\")\n",
+    "\n",
+    "    # Check that all the lengths of the lists are the same\n",
+    "    list_lengths = [len(lengths) for lengths in gap_lengths]\n",
+    "    if len(set(list_lengths)) != 1:\n",
+    "        raise ValueError(\n",
+    "            f\"Not all lists have the same length for number of gaps {num_gaps}. Lengths: {set(list_lengths)}\"\n",
+    "        )\n",
+    "    # sort the gap lengths in each array\n",
+    "    sorted_gap_lengths = [sorted(lengths) for lengths in gap_lengths]\n",
+    "    # now plot all of the first elements of the sorted lists toghether, then the second, etc\n",
+    "    for i in range(len(sorted_gap_lengths[0])):\n",
+    "        gap_lengths_i = [lengths[i] for lengths in sorted_gap_lengths]\n",
+    "        plot_stripviolinplot_list(\n",
+    "            data=gap_lengths_i,\n",
+    "            ylabel=\"Gap Length (nm)\",\n",
+    "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
+    "            ylim=\n",
+    "        )\n",
+    "\n",
+    "print(f\"###\\n###\\n### HEIGHT DEFECT GAP LENGTHS ###\\n###\\n###\")\n",
+    "\n",
+    "height_defect_gap_lengths_all = get_defect_gap_lengths(\n",
+    "    df=defect_stats_df,\n",
+    "    column_name=\"height_defect_direct_gaps_lengths\",\n",
+    ")\n",
+    "\n",
+    "for num_gaps, gap_lengths in height_defect_gap_lengths_all.items():\n",
+    "    print(f\"number of gaps: {num_gaps}\")\n",
+    "\n",
+    "    # Check that all the lengths of the lists are the same\n",
+    "    list_lengths = [len(lengths) for lengths in gap_lengths]\n",
+    "    if len(set(list_lengths)) != 1:\n",
+    "        raise ValueError(\n",
+    "            f\"Not all lists have the same length for number of gaps {num_gaps}. Lengths: {set(list_lengths)}\"\n",
+    "        )\n",
+    "    # sort the gap lengths in each array\n",
+    "    sorted_gap_lengths = [sorted(lengths) for lengths in gap_lengths]\n",
+    "    # now plot all of the first elements of the sorted lists toghether, then the second, etc\n",
+    "    for i in range(len(sorted_gap_lengths[0])):\n",
+    "        gap_lengths_i = [lengths[i] for lengths in sorted_gap_lengths]\n",
+    "        plot_stripviolinplot_list(\n",
+    "            data=gap_lengths_i,\n",
+    "            ylabel=\"Gap Length (nm)\",\n",
+    "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
+    "        )\n"
+   ]
   }
  ],
  "metadata": {
