[WIP] lay ground for individual IQR variance defect detection in find_height_defects_grains_dictionary

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -603,6 +603,7 @@
     "    defect_method: str,\n",
     "    height_threshold_iqr_factor: float,\n",
     "    height_threshold_abs_nm: float,\n",
+    "    individual_iqr_factor: float,\n",
     ") -> tuple[dict, dict]:\n",
     "    \"\"\"Find height defects in grains.\n",
     "\n",
@@ -612,7 +613,7 @@
     "        Dictionary containing grain data.\n",
     "    defect_method : str\n",
     "        Method to use for finding defects.\n",
-    "        Options: \"per_tip_median_iqr\", \"abs\"\n",
+    "        Options: \"per_tip_median_iqr\", \"abs\", \"individual_iqr\"\n",
     "    height_threshold_iqr_factor : float\n",
     "        IQR factor for calculating height thresholds.\n",
     "    height_threshold_abs_nm : float\n",
@@ -631,7 +632,15 @@
     "    print(f\"finding height defects using method {defect_method}\")\n",
     "    new_grains_dictionary = {}\n",
     "    height_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
-    "    if defect_method == \"per_tip_median_iqr\":\n",
+    "    if defect_method == \"individual_iqr\":\n",
+    "        # iterate over each grain\n",
+    "        for grain_index, grain_data in grains_dictionary.items():\n",
+    "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "                resampled_heights = molecule_data[\"resampled_heights\"]\n",
+    "                iqr = np.percentile(resampled_heights, 75) - np.percentile(resampled_heights, 25)\n",
+    "                # TODO: implement individual_iqr_factor height defect detection\n",
+    "\n",
+    "    elif defect_method == \"per_tip_median_iqr\":\n",
     "        # calculate height threshold\n",
     "        all_heights_by_tip = fetch_all_heights_by_tip(grains_dictionary=grains_dictionary)\n",
     "        for tip, heights in all_heights_by_tip.items():\n",
