add individual IQR method for curvature and height defects

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -514,11 +514,37 @@
     "    return num_defects\n",
     "\n",
     "\n",
+    "def individual_iqr_defect_detection(\n",
+    "    values: npt.NDArray[np.float64],\n",
+    "    individual_iqr_factor: float,\n",
+    "    direction: str,\n",
+    ") -> npt.NDArray[np.bool_]:\n",
+    "    \"\"\"Detect defects based on individual IQR factor.\"\"\"\n",
+    "\n",
+    "    if direction not in [\"above\", \"below\", \"both\"]:\n",
+    "        raise ValueError(f\"direction must be 'above' or 'below', 'both', got {direction}\")\n",
+    "\n",
+    "    iqr = np.percentile(values, 75) - np.percentile(values, 25)\n",
+    "    lower_threshold = np.median(values) - individual_iqr_factor * iqr\n",
+    "    upper_threshold = np.median(values) + individual_iqr_factor * iqr\n",
+    "    # iterate over the array and start defects where the value is below the lower threshold or above the upper threshold\n",
+    "    defects_bool = np.zeros(values.shape, dtype=np.bool_)\n",
+    "    for i, value in enumerate(values):\n",
+    "        if direction == \"above\" and value > upper_threshold:\n",
+    "            defects_bool[i] = True\n",
+    "        elif direction == \"below\" and value < lower_threshold:\n",
+    "            defects_bool[i] = True\n",
+    "        elif direction == \"both\" and (value < lower_threshold or value > upper_threshold):\n",
+    "            defects_bool[i] = True\n",
+    "    return defects_bool\n",
+    "\n",
+    "\n",
     "def find_curvature_defects_grains_dictionary(\n",
     "    grains_dictionary: dict,\n",
     "    defect_method: str,\n",
     "    curvature_threshold_abs_radpernm: float,\n",
     "    curvature_threshold_iqr_factor: float,\n",
+    "    curvature_individual_iqr_factor: float,\n",
     ") -> tuple[dict, dict]:\n",
     "    \"\"\"Find curvature defects in grains.\n",
     "\n",
@@ -528,7 +554,7 @@
     "        Dictionary containing grain data.\n",
     "    defect_method : str\n",
     "        Method to use for finding defects.\n",
-    "        Options: \"per_tip_median_iqr\", \"threshold_abs\"\n",
+    "        Options: \"per_tip_median_iqr\", \"threshold_abs\", \"individual_iqr\"\n",
     "    curvature_threshold_abs_radpernm : float\n",
     "        Absolute threshold for curvature defects in rad/nm.\n",
     "    curvature_threshold_iqr_factor : float\n",
@@ -549,7 +575,24 @@
     "    print(f\"finding curvature defects using method {defect_method}\")\n",
     "    new_grains_dictionary = {}\n",
     "    curvature_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
-    "    if defect_method == \"per_tip_median_iqr\":\n",
+    "    if defect_method == \"individual_iqr\":\n",
+    "        # iterate over each grain\n",
+    "        for grain_index, grain_data in grains_dictionary.items():\n",
+    "            total_curvature_defects_grain = 0\n",
+    "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "                smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
+    "                curvature_defects_bool = individual_iqr_defect_detection(\n",
+    "                    values=smoothed_curvatures, individual_iqr_factor=curvature_individual_iqr_factor, direction=\"both\"\n",
+    "                )\n",
+    "                curvature_defects_indexes = np.where(curvature_defects_bool)[0]\n",
+    "                total_curvature_defects_grain += count_defects_in_binary_array(binary_array=curvature_defects_bool)\n",
+    "                molecule_data[\"curvature_defects_bool\"] = curvature_defects_bool\n",
+    "                molecule_data[\"curvature_defects_indexes\"] = curvature_defects_indexes\n",
+    "\n",
+    "            # Add stats to grain data\n",
+    "            grain_data[\"num_curvature_defects\"] = total_curvature_defects_grain\n",
+    "            new_grains_dictionary[grain_index] = grain_data\n",
+    "    elif defect_method == \"per_tip_median_iqr\":\n",
     "        # calculate curvature threshold\n",
     "        all_curvatures_by_tip = fetch_all_curvatures_by_tip(grains_dictionary=grains_dictionary)\n",
     "        for tip, all_curvatures_for_tip in all_curvatures_by_tip.items():\n",
@@ -603,7 +646,7 @@
     "    defect_method: str,\n",
     "    height_threshold_iqr_factor: float,\n",
     "    height_threshold_abs_nm: float,\n",
-    "    individual_iqr_factor: float,\n",
+    "    height_individual_iqr_factor: float,\n",
     ") -> tuple[dict, dict]:\n",
     "    \"\"\"Find height defects in grains.\n",
     "\n",
@@ -618,6 +661,8 @@
     "        IQR factor for calculating height thresholds.\n",
     "    height_threshold_abs_nm : float\n",
     "        Absolute threshold for height defects in nm.\n",
+    "    height_individual_iqr_factor : float\n",
+    "        Individual IQR factor for detecting height defects.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -635,10 +680,20 @@
     "    if defect_method == \"individual_iqr\":\n",
     "        # iterate over each grain\n",
     "        for grain_index, grain_data in grains_dictionary.items():\n",
+    "            total_height_defects_grain = 0\n",
     "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "                resampled_heights = molecule_data[\"resampled_heights\"]\n",
-    "                iqr = np.percentile(resampled_heights, 75) - np.percentile(resampled_heights, 25)\n",
-    "                # TODO: implement individual_iqr_factor height defect detection\n",
+    "                height_defects_bool = individual_iqr_defect_detection(\n",
+    "                    values=resampled_heights, individual_iqr_factor=height_individual_iqr_factor, direction=\"below\"\n",
+    "                )\n",
+    "                height_defects_indexes = np.where(height_defects_bool)[0]\n",
+    "                total_height_defects_grain += count_defects_in_binary_array(binary_array=height_defects_bool)\n",
+    "                molecule_data[\"height_defects_bool\"] = height_defects_bool\n",
+    "                molecule_data[\"height_defects_indexes\"] = height_defects_indexes\n",
+    "\n",
+    "            # Add stats to grain data\n",
+    "            grain_data[\"num_height_defects\"] = total_height_defects_grain\n",
+    "            new_grains_dictionary[grain_index] = grain_data\n",
     "\n",
     "    elif defect_method == \"per_tip_median_iqr\":\n",
     "        # calculate height threshold\n",
@@ -692,9 +747,11 @@
     "    curvature_defect_method: str,\n",
     "    curvature_threshold_abs_radpernm: float,\n",
     "    curvature_threshold_iqr_factor: float,\n",
+    "    curvature_individual_iqr_factor: float,\n",
     "    height_defect_method: str,\n",
     "    height_threshold_iqr_factor: float,\n",
     "    height_threshold_abs_nm: float,\n",
+    "    height_individual_iqr_factor: float,\n",
     "    coindicing_defect_distance_threshold_nm: float,\n",
     "    defect_stats_dir: Path,\n",
     "    plot_defects: bool,\n",
@@ -713,6 +770,8 @@
     "        Absolute threshold for curvature defects in rad/nm.\n",
     "    curvature_threshold_iqr_factor : float\n",
     "        IQR factor for calculating curvature thresholds.\n",
+    "    curvature_individual_iqr_factor : float\n",
+    "        Individual IQR factor for detecting curvature defects.\n",
     "    height_defect_method : str\n",
     "        Method to use for finding height defects.\n",
     "        Options: \"per_tip_median_iqr\", \"abs\"\n",
@@ -720,6 +779,8 @@
     "        IQR factor for calculating height thresholds.\n",
     "    height_threshold_abs_nm : float\n",
     "        Absolute threshold for height defects in nm.\n",
+    "    height_individual_iqr_factor : float\n",
+    "        Individual IQR factor for detecting height defects.\n",
     "    coindicing_defect_distance_threshold_nm : float\n",
     "        Distance threshold in nm to consider defects coinciding.\n",
     "    defect_stats_dir : Path\n",
@@ -745,6 +806,7 @@
     "        defect_method=curvature_defect_method,\n",
     "        curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
     "        curvature_threshold_iqr_factor=curvature_threshold_iqr_factor,\n",
+    "        curvature_individual_iqr_factor=curvature_individual_iqr_factor,\n",
     "    )\n",
     "\n",
     "    # find height defects\n",
@@ -753,6 +815,7 @@
     "        defect_method=height_defect_method,\n",
     "        height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
     "        height_threshold_abs_nm=height_threshold_abs_nm,\n",
+    "        height_individual_iqr_factor=height_individual_iqr_factor,\n",
     "    )\n",
     "\n",
     "    # iterate over all grains and molecules\n",
@@ -972,12 +1035,14 @@
     ")\n",
     "\n",
     "# Find defects in height and curvature\n",
-    "curvature_defect_method = \"per_tip_median_iqr\"\n",
+    "curvature_defect_method = \"individual_iqr\"\n",
     "curvature_threshold_abs_radpernm = 0.15  # rad/nm\n",
     "curvature_threshold_iqr_factor = 3.0  # IQR factor for curvature threshold\n",
-    "height_defect_method = \"per_tip_median_iqr\"\n",
+    "curvature_individual_iqr_factor = 2.0  # IQR factor for individual curvature defects\n",
+    "height_defect_method = \"individual_iqr\"\n",
     "height_threshold_iqr_factor = 3.0  # IQR factor for height threshold\n",
     "height_threshold_abs_nm = 10.0  # nm, absolute height threshold\n",
+    "height_individual_iqr_factor = 2.0  # IQR factor for individual height defects\n",
     "coindicing_defect_distance_threshold_nm = 10.0  # nm, distance threshold for coinciding defects\n",
     "print(\"finding defects in height and curvature\")\n",
     "grains_dictionary_defects, defect_stats_df, curvature_thresholds_by_tip, height_thresholds_by_tip = (\n",
@@ -986,9 +1051,11 @@
     "        curvature_defect_method=curvature_defect_method,\n",
     "        curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
     "        curvature_threshold_iqr_factor=curvature_threshold_iqr_factor,\n",
+    "        curvature_individual_iqr_factor=curvature_individual_iqr_factor,\n",
     "        height_defect_method=height_defect_method,\n",
     "        height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
     "        height_threshold_abs_nm=height_threshold_abs_nm,\n",
+    "        height_individual_iqr_factor=height_individual_iqr_factor,\n",
     "        coindicing_defect_distance_threshold_nm=coindicing_defect_distance_threshold_nm,\n",
     "        defect_stats_dir=defect_stats_dir,\n",
     "        plot_defects=True,\n",
@@ -1524,7 +1591,6 @@
     "            data=gap_lengths_i,\n",
     "            ylabel=\"Gap Length (nm)\",\n",
     "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
-    "            ylim=\n",
     "        )\n",
     "\n",
     "print(f\"###\\n###\\n### HEIGHT DEFECT GAP LENGTHS ###\\n###\\n###\")\n",
