add ylim to keep scale consistent on stripplots

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1259,6 +1259,7 @@
     "    ylabel: str = \"\",\n",
     "    xlabel: str = \"\",\n",
     "    title: str = \"\",\n",
+    "    ylim: tuple[float, float] | None = None,\n",
     ") -> None:\n",
     "    \"\"\"Plot a strip and violin plot for a list of data.\"\"\"\n",
     "    plt.figure()\n",
@@ -1267,6 +1268,8 @@
     "    plt.ylabel(ylabel)\n",
     "    plt.xlabel(xlabel)\n",
     "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -1591,6 +1594,7 @@
     "            data=gap_lengths_i,\n",
     "            ylabel=\"Gap Length (nm)\",\n",
     "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
+    "            ylim=(0,500)\n",
     "        )\n",
     "\n",
     "print(f\"###\\n###\\n### HEIGHT DEFECT GAP LENGTHS ###\\n###\\n###\")\n",
@@ -1618,7 +1622,8 @@
     "            data=gap_lengths_i,\n",
     "            ylabel=\"Gap Length (nm)\",\n",
     "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
-    "        )\n"
+    "            ylim=(0,500)\n",
+    "        )"
    ]
   }
  ],
